crates/ars-components/src/overlay/snapshots/ars_components__overlay__hover_card__tests__hover_card_arrow_snapshot.snap
---
source: crates/ars-components/src/overlay/hover_card.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).arrow_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "arrow",
            ),
        ),
        (
            Data(
                "ars-placement",
            ),
            String(
                "top",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "hover-card",
            ),
        ),
    ],
    styles: [],
}
