crates/ars-components/src/overlay/snapshots/ars_components__overlay__hover_card__tests__hover_card_root_closed_snapshot.snap
---
source: crates/ars-components/src/overlay/hover_card.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "hover-card",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "closed",
            ),
        ),
    ],
    styles: [],
}
