crates/ars-components/src/overlay/snapshots/ars_components__overlay__hover_card__tests__hover_card_title_snapshot.snap
---
source: crates/ars-components/src/overlay/hover_card.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).title_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "title",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "hover-card",
            ),
        ),
        (
            Id,
            String(
                "hover-card-title",
            ),
        ),
    ],
    styles: [],
}
