crates/ars-components/src/overlay/snapshots/ars_components__overlay__hover_card__tests__hover_card_trigger_closed_snapshot.snap
---
source: crates/ars-components/src/overlay/hover_card.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "hover-card",
            ),
        ),
        (
            Aria(
                Expanded,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                HasPopup,
            ),
            String(
                "dialog",
            ),
        ),
        (
            Id,
            String(
                "hover-card-trigger",
            ),
        ),
    ],
    styles: [],
}
